# c-drive-file-backup-migration

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.example.txt  app.py  app_fluent.py  app_qt.py  backup_cli.py  backup_core.py  cloud_backup.py  config.json  project_config.py  pyproject.toml  requirements.txt  style_demo_fluent.py  style_lab.py  ui_helpers.py  windows_portable.spec  启动AI会话配置备份迁移.bat  启动AI配置备份助手.bat  启动Fluent界面.bat  启动Fluent风格演示器.bat  启动旧版Tkinter界面.bat  定时备份入口.bat  开发环境恢复安装清单.md  版本.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
data/: schedule.json
design/: tokens.json
docs/: UI风格路线演示.md  github_style_gallery.html
docs/ui_components/: avalonia-ui.html  component_gallery.css  component_gallery.js  customtkinter.html  flet.html  index.html  material-design-xaml.html  pyqt-fluent-widgets.html  shadcn-ui.html  tauri.html  uno-platform.html
scripts/: build_windows_release.ps1  build_windows_release.py  capture_ui_snapshots.py
scripts/test/: test_backup_core.py  test_cloud_backup.py  test_fluent_smoke.py  test_gui_config_sync.py  test_project_config.py  test_style_demo_fluent.py  test_ui_helpers.py
skills/bad/: SKILL.md
skills/good/: SKILL.md
ui方案/: 启动Fluent风格演示器.bat  启动GitHub风格全景演示.bat  启动UI组件图库.bat  启动跨平台UI风格实验室.bat
