[project]
name = "ai-config-backup-helper"
version = "1.7.0"
description = "Windows desktop tool for backing up and restoring AI/developer configuration folders."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "AI配置备份助手维护者" }
]
dependencies = [
  "PySide6>=6.10,<7",
  "PySide6-Fluent-Widgets>=1.11,<2",
]

[project.urls]
Homepage = "https://github.com/Deanewills/ai-config-backup-helper"
Issues = "https://github.com/Deanewills/ai-config-backup-helper/issues"

[tool.ruff]
line-length = 140
target-version = "py312"
