[project]
name = "ai-session-config-backup-migration"
version = "0.0.2"
description = "Windows desktop tool for backing up and migrating AI session and dot-prefixed folders."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "AI会话配置备份迁移维护者" }
]
dependencies = [
  "PySide6>=6.10,<7",
  "PySide6-Fluent-Widgets>=1.11,<2",
]

[project.urls]
Homepage = "https://github.com/myjr2015/ai-session-config-backup-migration"
Issues = "https://github.com/myjr2015/ai-session-config-backup-migration/issues"

[tool.ruff]
line-length = 140
target-version = "py312"
