[project]
name = "ai-session-backup"
version = "1.1.0"
description = "Windows desktop tool for backing up AI session and dot-prefixed folders."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Ai会话备份维护者" }
]
dependencies = [
  "PySide6>=6.10,<7",
  "PySide6-Fluent-Widgets>=1.11,<2",
  "boto3>=1.34,<2",
  "cryptography>=42,<47",
]

[project.urls]
Homepage = "https://github.com/myjr2015/ai-session-backup"
Issues = "https://github.com/myjr2015/ai-session-backup/issues"

[tool.ruff]
line-length = 140
target-version = "py312"
